<resources>
    <string name="app_name">TaxiDriversHelpEachOther</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_phone_number">Please enter your phone number :</string>
    <string name="enter_code">"We have sent code to : "</string>
    <string name="code">Please enter code</string>
    <string name="next">Next</string>
    <string name="sendAnotherCode">Send another code</string>
    <string name="seconds">" seconds"</string>
    <string name="available">Available</string>
    <string name="busy">Busy</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="inAdvanced">In advanced</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="immediate">Immediate</string>
    <string name="fixed_price">Fixed Price</string>
    <string name="price">Price</string>
    <string name="clientName">Name</string>
    <string name="clientPhoneNumber">Phone Number</string>
    <string name="shuttle_information">Shuttle Information</string>
    <string name="client_information">Client Information</string>
    <string name="remarks">Remarks</string>
    <string name="publish_shuttle">Publish</string>
    <string name="from">From</string>
    <string name="destination">Destination</string>
    <string name="commission_fee">Commission Fee</string>
    <string name="approve_shuttle">Take it</string>
    <string name="new_shuttle_request">New Shuttle Request</string>
    <string name="shuttle_canceled_by_client">Shuttle Canceled</string>
    <string name="looking_for_new_shuttles">Looking For New Shuttles</string>
    <string name="offlineLocation">Results based on previous location because there is no background location permission</string>
    <string name="cantWorkProperly">Can\'t work properly without location permissions</string>
    <string name="offlineNotificationToast">App notifications will be based on your last location if app is closed</string>
    <string name="driver_name">Driver Name</string>
    <string name="post_new_shuttle_lead">Post New Shuttle Lead</string>
    <string name="available_shuttles">Available Shuttles</string>
    <string name="commitment_shuttles">Commitment Shuttles</string>
    <string name="lead_management">Lead Management</string>
    <string name="monitoring_report">Monitoring report</string>
    <string name="please_enter_ten_digits_phone_number">Please enter 10 digits number</string>
    <string name="six_digits_number">Please enter 6 digits number</string>
    <string name="driver_information">Driver Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="taxi_information">Taxi Information</string>
    <string name="driver_license_photo">Driver\'s license photo</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="vehicleLicenseNumber">License Number</string>
    <string name="taxi_number">Taxi Number</string>
    <string name="model">Model</string>
    <string name="vehicleLicenseValidUntil">Vehicle License Valid Until</string>
    <string name="insuranceValidUntil">Insurance Valid Until</string>
    <string name="accessible">Accessible Taxi</string>
    <string name="vehicleLicensePhoto">Vehicle License Photo</string>
    <string name="insurancePhoto">Insurance Photo</string>
    <string name="submit">Submit</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_license_number">Invalid License Number</string>
    <string name="invalid_taxi_number">Invalid Taxi Number</string>
    <string name="invalid_model">invalid model</string>
    <string name="date_is_in_the_past_error">Date can\'t be in the past</string>
    <string name="number_of_passenger_seats">Available passenger seats</string>
    <string name="phone_must_start_with_zero">Phone number must start with zero</string>
    <string name="meter_price">Meter</string>
    <string name="hours">Hours</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="minute">One minute</string>
    <string name="search_radius">Search radius for all shuttles</string>
    <string name="search_radius_for_shuttles_at_minimum_cost_of">for minimum price of</string>
    <string name="for_premium_shuttles">Add premium shuttles search settings</string>
    <string name="minimum_price">Minimum price</string>
    <string name="pickup_distance">Pick-up distance</string>
    <string name="pickup_time">pickup time</string>
    <string name="we_found_shuttle_requests_in_your_area">We found requests for shuttles that match your search settings</string>
    <string name="unable_to_calculate_distance">Unable to calculate distance for pickup</string>
    <string name="cancel_shuttle">Cancel</string>
    <string name="supplier_information">supplier information</string>
    <string name="edit">Edit</string>
    <string name="shuttle_status">Shuttle Status</string>
    <string name="sold">Sold</string>
    <string name="still_looking_for_driver">Looking for a driver</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="getNotifications">Notifications</string>
    <string name="balance">Balance:</string>
    <string name="daily_balance">Daily balance:</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="more_information">More</string>
    <string name="less_information">Less</string>
    <string name="call_dialog_msg">Dial to</string>
    <string name="dial">Dial</string>
    <string name="cancel">Cancel</string>
</resources>