<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/shuttle_item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#F1ECCA"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/shuttleItemTimeAndDateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@android:drawable/ic_menu_my_calendar">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SIC_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="none"
                            android:text="@string/date"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/outline_schedule_black_18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SIC_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/time"
                            android:textDirection="ltr"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/baseline_drive_eta_black_18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SIC_driving_time_to_pickup_place"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/time"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/outline_person_pin_circle_black_18dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/SIC_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/from"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/outline_pin_drop_black_18dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/SIC_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/destination"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/baseline_note_black_18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SIC_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="textMultiLine"
                        android:isScrollContainer="true"
                        android:nestedScrollingEnabled="true"
                        android:overScrollMode="ifContentScrolls"
                        android:scrollIndicators="end"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:scrollbars="vertical"
                        android:text="@string/remarks"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SIC_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/price"
                            android:text="@string/price"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SIC_commission_fee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/commission_fee"
                            android:singleLine="true"
                            android:text="@string/commission_fee"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/SIC_take"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#FBD32E"
                        android:text="@string/approve_shuttle"
                        android:textColor="#333030"
                        app:icon="@drawable/baseline_done_black_18dp"
                        app:iconSize="25dp"
                        app:iconTint="#333030" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>